tests/ui/suggestions/const-pat-non-exaustive-let-new-var.stderr
error[E0005]: refutable pattern in local binding
  --> $DIR/const-pat-non-exaustive-let-new-var.rs:2:9
   |
LL |     let A = 3;
   |         ^
   |         |
   |         patterns `i32::MIN..=1_i32` and `3_i32..=i32::MAX` not covered
   |         missing patterns are not covered because `A` is interpreted as a constant pattern, not a new variable
   |         help: introduce a variable instead: `A_var`
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch18-02-refutability.html
   = note: the matched value is of type `i32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
